Added on Kierkegaard sections

--- a/hugo.toml
+++ b/hugo.toml
@@ -8,5 +8,9 @@ theme = "dream"
   avatar = "img/avatar.png"
   lightTheme = "emerald"
   darkTheme = "forest"
+  showTableOfContents = false
+
+
 [frontmatter]
   lastmod = [":fileModTime", "lastmod", "date"]
+
